--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
       crossorigin="anonymous"
     />
     <script src="https://kit.fontawesome.com/f5a24ca635.js" crossorigin="anonymous"></script>
+    <style>
+      
+@import url('https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&display=swap');
+
+    </style>
     <!-- bootstrap cdn -->
  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
@@ -61,7 +66,7 @@
         />
         <div class="div-block-18">
           <a
-            href="https://t.me/elon6900portal"
+            href="https://t.me/Elon6900_Eth"
             target="_blank"
             class="link-block w-inline-block"
             >
@@ -70,7 +75,7 @@
               </a
           >
           <a
-            href="https://twitter.com/Elon6900eth"
+            href="https://x.com/Elon6900_Eth"
             target="_blank"
             class="w-inline-block"
             >
@@ -108,7 +113,7 @@
         </div>
         <div class="div-block-18">
           <a
-            href="https://t.me/elon6900portal"
+            href="https://t.me/Elon6900_Eth"
             target="_blank"
             class="link-block w-inline-block"
             >
@@ -117,7 +122,7 @@
               </a
           >
           <a
-            href="https://twitter.com/Elon6900eth"
+            href="https://x.com/Elon6900_Eth"
             target="_blank"
             class="w-inline-block"
             >
@@ -158,13 +163,13 @@
               <div class="w-layout-grid grid-3">
                 <a
                   id="w-node-d9acb092-ff94-6ac4-5771-9edf082f8ca8-7adf6db4"
-                  href="https://t.me/elon6900portal"
+                  href="https://t.me/Elon6900_Eth"
                   target="_blank"
                   class="button hero chart w-button"
                   >Telegram</a
                 ><a
                   id="w-node-_627df53c-88e0-23b5-6163-cb78ad24a69f-7adf6db4"
-                  href="https://twitter.com/Elon6900eth"
+                  href="https://x.com/Elon6900_Eth"
                   target="_blank"
                   class="button hero buynew w-button"
                   >Twitter</a
@@ -222,13 +227,13 @@
           <div class="div-block-19"></div>
           <div class="div-block-3">
             <h1 class="heading-2">ABOUT US</h1>
-            <p class="paragraph">
+            <p class="paragraph" style=" font-family: 'Afacad Flux', sans-serif!important;font-size:29px;color:#fff">
              The name of the most bullish meme coin in the space right now: 
 
-Elon6900. 
+             Elon6900. 
 
-It is a cutting edge high-tech firm out of the Midwest awaiting imminent patent approval on the next generation of bag pumping utility, that have both huge military and civilian applications now..</p><p class="paragraph">Right now, John, the Elon9600 $Elon trades over-the-counter at 10 cents a share.  And by the way, John, our analysts indicate it could go a heck of a lot higher than that. </p>
-<p class="paragraph">Your profit on a mere 0.1 eth investment would be upwards of 100,000 eth!</p>
+It is a cutting edge high-tech firm out of the Midwest awaiting imminent patent approval on the next generation of bag pumping utility, that have both huge military and civilian applications now..</p><p class="paragraph" style=" font-family: 'Afacad Flux', sans-serif!important;font-size:29px;color:#fff">Right now, John, the Elon6900 $Elon trades over-the-counter at 10 cents a share.  And by the way, John, our analysts indicate it could go a heck of a lot higher than that. </p>
+<p class="paragraph" style=" font-family: 'Afacad Flux', sans-serif!important;font-size:29px;color:#fff">Your profit on a mere 0.1 eth investment would be upwards of 100,000 eth!</p>
             </p>
           </div>
 
@@ -480,23 +485,23 @@ It is a cutting edge high-tech firm out of the Midwest awaiting imminent patent 
           </h1>
           <h3 class="heading-3-copy">
             We invite you to join our
-            <a href="https://t.me/elon6900portal" class="link-2">Telegram</a> community, and be sure to
+            <a href="https://t.me/Elon6900_Eth" class="link-2">Telegram</a> community, and be sure to
             follow on
-            <a href="https://twitter.com/Elon6900eth" target="_blank" class="link-2">Twitter<br /></a>
+            <a href="https://x.com/Elon6900_Eth" target="_blank" class="link-2">Twitter<br /></a>
           </h3>
           <div class="heading-3-copy">
             <a href="mailto:BoringTeslaSpaceXNeuralXCorp@gmail.com"><span>BoringTeslaSpaceXNeuralXCorp</span
             ><span class="text-span-41">@gmail.</span><span>com</span><a>
           </div>
           <div class="div-block-12">
-            <a href="https://t.me/elon6900portal" target="_blank" class="link-block-3 w-inline-block"
+            <a href="https://t.me/Elon6900_Eth" target="_blank" class="link-block-3 w-inline-block"
               ><img
                 src="https://uploads-ssl.webflow.com/648c8ad3f43c3e327adf6db7/648c8ad3f43c3e327adf6dd3_tg2.png"
                 loading="lazy"
                 width="85"
                 alt=""
                 class="image-11" /></a
-            ><a href="https://twitter.com/Elon6900eth" target="_blank" class="link-block-4 w-inline-block"
+            ><a href="https://x.com/Elon6900_Eth" target="_blank" class="link-block-4 w-inline-block"
               ><img
                 src="https://uploads-ssl.webflow.com/648c8ad3f43c3e327adf6db7/648c8ad3f43c3e327adf6dd4_Logo_of_Twitter.svg.png"
                 loading="lazy"
