--- a/index.html
+++ b/index.html
@@ -405,12 +405,12 @@ It is a cutting edge high-tech firm out of the Midwest awaiting imminent patent 
                   <h3 class="fs-5 font-medium text-white my-3">LAUNCH</h3>
                   <img src="/images/logo.png" class="road_img" alt="" />
                   <h2 class="fs-3 font-semibold text-white my-3">Phase 1</h2>
-                  <ul class="p-0 m-0 road_list">
-                    <li>Uniswap Launch</li>
-                    <li>The Inception of the Idea</li>
-                    <li>Community Forming</li>
-                    <li> Send Elon6900 to the moon </li>
-                    <li>Onboarding of Telegram and Twitter promoters</li>
+                  <ul class="p-0 m-0 road_list" style=" font-family: 'Afacad Flux', sans-serif;" >
+                    <li style=" font-family: 'Afacad Flux', sans-serif!important;font-size:22px">Uniswap Launch</li>
+                    <li style=" font-family: 'Afacad Flux', sans-serif!important;font-size:22px">The Inception of the Idea</li>
+                    <li style=" font-family: 'Afacad Flux', sans-serif!important;font-size:22px">Community Forming</li>
+                    <li style=" font-family: 'Afacad Flux', sans-serif!important;font-size:22px"> Send Elon6900 to the moon </li>
+                   
                   </ul>
                 </div>
               </div>
@@ -423,12 +423,12 @@ It is a cutting edge high-tech firm out of the Midwest awaiting imminent patent 
                   <h3 class="fs-5 font-medium text-white my-3">MARKETING</h3>
                   <img src="/images/logo.png"  class="road_img" alt="" />
                   <h2 class="fs-3 font-semibold text-white my-2">Phase 2</h2>
-                  <ul class="p-0 m-0 road_list">
-                    <li>Website Upgrade</li>
-                    <li>Marketing Phase 1</li>
-                    <li>Community Forming</li>
-                    <li>Twitter/X Trending</li>
-                    <li>Surprise Announcement</li>
+                  <ul class="p-0 m-0 road_list" style=" font-family: 'Afacad Flux', sans-serif;" >
+                    <li style=" font-family: 'Afacad Flux', sans-serif!important;font-size:22px">Website Upgrade</li>
+                    <li style=" font-family: 'Afacad Flux', sans-serif!important;font-size:22px">Marketing Phase 1</li>
+                    <li style=" font-family: 'Afacad Flux', sans-serif!important;font-size:22px">Community Forming</li>
+                    <li style=" font-family: 'Afacad Flux', sans-serif!important;font-size:22px">Twitter/X Trending</li>
+                    <li style=" font-family: 'Afacad Flux', sans-serif!important;font-size:22px">Surprise Announcement</li>
                   </ul>
                 </div>
               </div>
@@ -443,12 +443,12 @@ It is a cutting edge high-tech firm out of the Midwest awaiting imminent patent 
                   </h3>
                   <img src="/images/logo.png"  class="road_img" alt="" />
                   <h2 class="fs-3 font-semibold text-white my-2">Phase 3</h2>
-                  <ul class="p-0 m-0 road_list">
-                    <li>Strategical Partnerships</li>
-                    <li>YouTube & TikTok Exposure</li>
-                    <li>Back to True Decentralization</li>
-                    <li>The Future In The Past</li>
-                    <li>Roadmap V2</li>
+                  <ul class="p-0 m-0 road_list" >
+                    <li style=" font-family: 'Afacad Flux', sans-serif!important;font-size:22px">Strategical Partnerships</li>
+                    <li style=" font-family: 'Afacad Flux', sans-serif!important;font-size:22px">YouTube & TikTok Exposure</li>
+                    <li style=" font-family: 'Afacad Flux', sans-serif!important;font-size:22px">Back to True Decentralization</li>
+                    <li style=" font-family: 'Afacad Flux', sans-serif!important;font-size:22px">The Future In The Past</li>
+                    <li style=" font-family: 'Afacad Flux', sans-serif!important;font-size:22px">Roadmap V2</li>
                   </ul>
                 </div>
               </div>
