--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       </div>
       <div class="div-block-11">
         <a
-          href="https://app.uniswap.org/#/swap?outputCurrency=0x00000000000000000000000000000"
+          href="https://app.uniswap.org/#/swap?outputCurrency=0xf04B4D4D78f4d171E448905BCffe2CefF2197193 "
           target="_blank"
           class="button header w-button"
           style=" font-family: 'Afacad Flux', sans-serif!important;"
@@ -108,7 +108,7 @@
         </div>
         <div class="div-block-11">
           <a
-            href="https://app.uniswap.org/#/swap?outputCurrency=0x00000000000000000000000000000"
+            href="https://app.uniswap.org/#/swap?outputCurrency=0xf04B4D4D78f4d171E448905BCffe2CefF2197193 "
             class="button header w-button"
             >BUY NOW</a
           >
@@ -181,7 +181,7 @@
                   >Twitter</a
                 ><a
                   id="w-node-de22be1a-5fa6-3bc0-646b-e51f444e9b28-7adf6db4"
-                  href="chartlink"
+                  href="https://www.dextools.io/app/en/ether/pair-explorer/0x90298f5933a8775cb53831d03008cf189103054e?t=1728272832995"
                   style=" font-family: 'Afacad Flux', sans-serif!important;"
                   class="button hero gal w-button"
                   >Chart</a
@@ -194,7 +194,7 @@
                 class="heading-7"
                 style="color:#f9f9f9"
               >
-                Contract: 0x00000000000000000000000000000
+                Contract: 0xf04B4D4D78f4d171E448905BCffe2CefF2197193 
               </h1>
             </div>
           </div>
@@ -515,7 +515,7 @@ It is a cutting edge high-tech firm out of the Midwest awaiting imminent patent 
                 width="65"
                 alt=""
                 class="image-11" /></a
-            ><a href="chartlink" target="_blank" class="link-block-5 w-inline-block"
+            ><a href="https://www.dextools.io/app/en/ether/pair-explorer/0x90298f5933a8775cb53831d03008cf189103054e?t=1728272832995" target="_blank" class="link-block-5 w-inline-block"
               ><img
                 src="https://uploads-ssl.webflow.com/648c8ad3f43c3e327adf6db7/648c8ad3f43c3e327adf6dd2_detool.png"
                 loading="lazy"
